UPDATE - Admin UI

--- a/app/src/main/res/layout/activity_admin_doctor_approval.xml
+++ b/app/src/main/res/layout/activity_admin_doctor_approval.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bottom_left_pink"
+    android:background="#E3F2FD"
     tools:context=".AdminDoctorApproval">
 
     <Spinner
         android:id="@+id/spinnerDoctorAppointments"
-        android:layout_width="245dp"
+        android:layout_width="220dp"
         android:layout_height="48dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
@@ -20,32 +20,48 @@
     <View
         android:id="@+id/view21"
         android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        android:background="@drawable/ic_wpwwave"
+        android:layout_height="50dp"
+        android:background="#1A446B"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/view73"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:background="#1A446B"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView33"
         android:layout_width="wrap_content"
         android:layout_height="22dp"
-        android:layout_marginStart="24dp"
-        android:text="@string/selectEmail"
-        android:textColor="#000000"
+        android:layout_marginTop="8dp"
+        android:text="@string/select_email"
+        android:textColor="#1A446B"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view21" />
 
     <Button
         android:id="@+id/buttonDoctorViewAppointments"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_width="140dp"
+        android:layout_height="50dp"
         android:layout_marginTop="24dp"
-        android:background="@drawable/center_shape"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/navy"
+        android:padding="10dp"
         android:text="@string/view"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@+id/spinnerDoctorAppointments"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView33" />
 
     <RelativeLayout
@@ -66,7 +82,7 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_marginTop="8dp"
-                android:background="@drawable/medicalteam"
+                android:background="@drawable/doctor"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -77,9 +93,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="24dp"
-                android:fontFamily="serif-monospace"
                 android:text="@string/id_number"
-                android:textColor="#000000"
+                android:textColor="#1A446B"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -91,9 +106,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="16dp"
-                android:fontFamily="serif-monospace"
                 android:text="@string/phone_no"
-                android:textColor="#000000"
+                android:textColor="#1A446B"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -105,9 +119,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="16dp"
-                android:fontFamily="serif-monospace"
                 android:text="@string/employee"
-                android:textColor="#000000"
+                android:textColor="#1A446B"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -119,9 +132,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="16dp"
-                android:fontFamily="serif-monospace"
                 android:text="@string/username"
-                android:textColor="#000000"
+                android:textColor="#1A446B"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -133,9 +145,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="16dp"
-                android:fontFamily="serif-monospace"
                 android:text="@string/timeavailableCAPS"
-                android:textColor="#000000"
+                android:textColor="#1A446B"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -147,9 +158,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="16dp"
-                android:fontFamily="serif-monospace"
                 android:text="@string/departmentCAPS"
-                android:textColor="#000000"
+                android:textColor="#1A446B"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -169,7 +179,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="serif-monospace"
-                android:textColor="#000000"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintBaseline_toBaselineOf="@+id/textView34"
@@ -180,7 +189,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="serif-monospace"
-                android:textColor="#000000"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintBaseline_toBaselineOf="@+id/textView35"
@@ -191,7 +199,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="serif-monospace"
-                android:textColor="#000000"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintBaseline_toBaselineOf="@+id/textView39"
@@ -202,7 +209,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="serif-monospace"
-                android:textColor="#000000"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintBaseline_toBaselineOf="@+id/textView40"
@@ -213,7 +219,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="serif-monospace"
-                android:textColor="#000000"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintBaseline_toBaselineOf="@+id/textView41"
@@ -224,7 +229,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="serif-monospace"
-                android:textColor="#000000"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintBaseline_toBaselineOf="@+id/textView42"
@@ -235,27 +239,29 @@
 
     <Button
         android:id="@+id/buttonCancelAppointmentDoctor"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:background="@drawable/center_shape"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="8dp"
+        android:background="@drawable/button_white_and_blue_border_background"
+        android:padding="10dp"
         android:text="@string/rejectbutton"
+        android:textColor="#1A446B"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:backgroundTint="#BD0606"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/relativeLayout8" />
 
     <Button
         android:id="@+id/buttonApointmentAttendedDoctor"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:background="@drawable/center_shape"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/navy"
+        android:padding="10dp"
         android:text="@string/approvebutton"
+        android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:backgroundTint="#0A7C0F"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/relativeLayout8" />
 </androidx.constraintlayout.widget.ConstraintLayout>
