--- a/app/src/main/res/layout/activity_report_generation.xml
+++ b/app/src/main/res/layout/activity_report_generation.xml
@@ -121,6 +121,18 @@
                 app:layout_constraintBaseline_toBaselineOf="@+id/textView60"
                 app:layout_constraintStart_toEndOf="@+id/divider24" />
 
+            <ProgressBar
+                android:id="@+id/progressBarAdminReports"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="85dp"
+                android:layout_height="85dp"
+                android:indeterminateDrawable="@drawable/progress_icon"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView60" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </RelativeLayout>
 
