--- a/app/src/main/res/layout/activity_doctor_history_new.xml
+++ b/app/src/main/res/layout/activity_doctor_history_new.xml
@@ -10,8 +10,8 @@
     <View
         android:id="@+id/view74"
         android:layout_width="330dp"
-        android:layout_height="180dp"
-        android:layout_marginTop="40dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/whiterectangle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,8 +22,8 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="30dp"
         android:background="@drawable/pop_up_appointments_background"
-        app:layout_constraintBottom_toBottomOf="@+id/view74"
         app:layout_constraintStart_toStartOf="@+id/view74"
         app:layout_constraintTop_toTopOf="@+id/view74" />
 
@@ -31,9 +31,9 @@
         android:id="@+id/view76"
         android:layout_width="150dp"
         android:layout_height="150dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/pop_up_appointments_background"
-        app:layout_constraintBottom_toBottomOf="@+id/view74"
         app:layout_constraintEnd_toEndOf="@+id/view74"
         app:layout_constraintTop_toTopOf="@+id/view74" />
 
@@ -49,7 +49,7 @@
         app:layout_constraintTop_toTopOf="@+id/view75" />
 
     <TextView
-        android:id="@+id/textView98"
+        android:id="@+id/textViewAppointmentsAttended_HISTORY"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-black"
@@ -73,7 +73,7 @@
         app:layout_constraintTop_toTopOf="@+id/view76" />
 
     <TextView
-        android:id="@+id/textView101"
+        android:id="@+id/textViewAppointmentsCancelled_HISTORY"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-black"
@@ -94,4 +94,43 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view74" />
+
+    <TextView
+        android:id="@+id/textView102"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/appointments_history"
+        android:textColor="#1A446B"
+        android:textSize="20dp"
+        app:layout_constraintEnd_toEndOf="@+id/view74"
+        app:layout_constraintStart_toStartOf="@+id/view74"
+        app:layout_constraintTop_toTopOf="@+id/view74" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="320dp"
+        android:layout_height="400dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintEnd_toEndOf="@+id/view77"
+        app:layout_constraintStart_toStartOf="@+id/view77"
+        app:layout_constraintTop_toTopOf="@+id/view77" />
+
+    <View
+        android:id="@+id/view78"
+        android:layout_width="320dp"
+        android:layout_height="30dp"
+        android:elevation="5dp"
+        app:layout_constraintEnd_toEndOf="@+id/view77"
+        app:layout_constraintStart_toStartOf="@+id/view77"
+        app:layout_constraintTop_toTopOf="@+id/view77" />
+
+    <TextView
+        android:id="@+id/textView107"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/appointmentattended"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
+        app:layout_constraintEnd_toEndOf="@+id/view78"
+        app:layout_constraintStart_toStartOf="@+id/view78"
+        app:layout_constraintTop_toTopOf="@+id/view77" />
 </androidx.constraintlayout.widget.ConstraintLayout>
