--- a/app/src/main/res/layout/doctor_appointments_reyclerview_layout_new.xml
+++ b/app/src/main/res/layout/doctor_appointments_reyclerview_layout_new.xml
@@ -183,10 +183,13 @@
         <View
             android:id="@+id/divider36"
             android:layout_width="409dp"
-            android:layout_height="20dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="-2dp"
             android:background="?android:attr/listDivider"
             app:layout_constraintBottom_toBottomOf="@+id/view46"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/buttonCancelAppointmentAttendance" />
 
         <Button
             android:id="@+id/buttonMarkAttendanceAppointment"
